--- a/plan9/rc/Makefile
+++ b/plan9/rc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/09 14:35:22 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/22 00:54:09 hubertf Exp $
 # New ports collection makefile for:    rc
 # Version required:     1.5b1
 # Date created:         Sun Aug 13 12:36:14 CDT 1995
@@ -16,4 +16,10 @@ MAINTAINER=	erich@FreeBSD.org
 
 NO_WRKSUBDIR=	yes
 
+OPSYS!=		uname -s
+.if (${OPSYS} == "NetBSD")
+MANCOMPRESSED=	yes
+.endif
+
+MAN1=		rc.1 history.1
 .include <bsd.port.mk>
