--- a/plan9/sam/Makefile
+++ b/plan9/sam/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/09 14:35:23 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/22 01:04:58 hubertf Exp $
 # New ports collection makefile for:    sam
 # Version required:     4.3
 # Date created:         Sun Aug 13 12:36:14 CDT 1995
@@ -19,5 +19,15 @@ NO_WRKSUBDIR=	yes
 EXTRACT_CMD=		zcat
 EXTRACT_BEFORE_ARGS=
 EXTRACT_AFTER_ARGS=	|sh
+
+OPSYS!=		uname -s
+.if (${OPSYS} == "NetBSD")
+MANCOMPRESSED=	yes
+.endif
+
+MAN1=		sam.1
+MAN3=		add.3 balloc.3 bitblt.3 cachechars.3 event.3 frame.3 graphics.3 rgbpix.3 rune.3
+MAN4=		font.4 keyboard.4 utf.4
+MAN6=		bitmap.6 regexp.6
 
 .include <bsd.port.mk>
