--- a/misc/chord/Makefile
+++ b/misc/chord/Makefile
@@ -3,7 +3,8 @@
 # Date created:		24 April 1995
 # Whom:			Satoshi Asami
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:54:04 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/24 00:55:33 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.4 1997/04/30 03:18:06 asami Exp
 #
 
 DISTNAME=	chord
@@ -12,5 +13,8 @@ CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	asami@FreeBSD.ORG
+
+MANCOMPRESSED=	yes
+MAN1=		chord.1 a2crd.1
 
 .include <bsd.port.mk>
