--- a/misc/fep/Makefile
+++ b/misc/fep/Makefile
@@ -3,7 +3,8 @@
 # Date created:         20 Feb 1996
 # Whom:                 Nobuhiro Yasutomi <nobu@psrc.isac.co.jp>
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:54:17 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/24 01:13:48 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.2 1996/11/11 05:49:31 obrien Exp
 #
 
 DISTNAME=	fep
@@ -14,5 +15,7 @@ MASTER_SITES=	ftp://ftp.sra.co.jp/pub/cmd/
 MAINTAINER=	nobu@psrc.isac.co.jp
 
 NO_WRKSUBDIR=	yes
+MANCOMPRESSED=	yes
+MAN1=		fep.1
 
 .include <bsd.port.mk>
