--- a/misc/git/Makefile
+++ b/misc/git/Makefile
@@ -3,7 +3,8 @@
 # Date created:		12 Jul 1995
 # Whom:			torstenb@FreeBSD.ORG
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:54:19 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/24 01:17:57 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.8 1996/11/21 11:54:39 asami Exp
 #
 
 DISTNAME=	git-4.3.11
@@ -11,12 +12,19 @@ CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GNU}
 
 GNU_CONFIGURE=	YES
+CONFIGURE_ARGS=	${ARCH}--netbsd
+RUN_DEPENDS=	${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
 MAN1=		git.1 gitaction.1 gitmount.1 gitcmp.1 gitkeys.1 \
 		gitredir.1 gitrgrep.1 gitps.1 gitview.1
 
 pre-install:
+	(cd ${WRKSRC}/info ; ${MAKE} info )
 	${CP} ${WRKSRC}/term/.gitrc.ansi \
 		${WRKSRC}/term/.gitrc.cons25
 	(cd ${WRKSRC}/term ; patch --quiet -p0 <${FILESDIR}/gitrc.cons25.patch )
+
+post-install:
+	@install-info ${PREFIX}/info/git.info ${PREFIX}/info/dir
+
 
 .include <bsd.port.mk>
