--- a/misc/jive/Makefile
+++ b/misc/jive/Makefile
@@ -4,7 +4,8 @@
 # Date created:			  Mon Feb 17, 1997
 # Whom:				  David O'Brien (obrien@NUXI.com)
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:54:24 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/24 01:24:33 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.2 1997/04/02 07:58:25 obrien Exp
 #
 
 DISTNAME=	jive-1.1
