--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,26 +1,26 @@
-# $NetBSD: Makefile,v 1.7 1997/10/23 20:26:23 agc Exp $
+# $NetBSD: Makefile,v 1.8 1997/10/24 01:33:17 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.117 1997/10/13 04:41:07 max Exp
 #
 
     SUBDIR += amanda
-#    SUBDIR += astrolog
-#    SUBDIR += buffer
-#    SUBDIR += cal
-#    SUBDIR += chord
-#    SUBDIR += colorls
-#    SUBDIR += ctk
-#    SUBDIR += dejagnu
-#    SUBDIR += dotfile
-#    SUBDIR += ecc
-#    SUBDIR += estic
-#    SUBDIR += fd
-#    SUBDIR += fep
-#    SUBDIR += figlet
-#    SUBDIR += git
-#    SUBDIR += gnuls
-#    SUBDIR += ical
-#    SUBDIR += jive
-#    SUBDIR += kp
+    SUBDIR += astrolog
+    SUBDIR += buffer
+    SUBDIR += cal
+    SUBDIR += chord
+    SUBDIR += colorls
+#    SUBDIR += ctk		# needs ncurses - HF
+#    SUBDIR += dejagnu		# needs expect - HF
+    SUBDIR += dotfile
+#    SUBDIR += ecc		# broken - HF
+#    SUBDIR += estic		# needs unzip - HF
+    SUBDIR += fd
+    SUBDIR += fep
+    SUBDIR += figlet
+    SUBDIR += git
+    SUBDIR += gnuls
+#    SUBDIR += ical		# broken w/ tcl/tk V8.0 - HF
+    SUBDIR += jive
+#    SUBDIR += kp		# path of wish8.0 - how? - HF
 #    SUBDIR += less
     SUBDIR += libutf
 #    SUBDIR += lile
