--- a/plan9/Makefile
+++ b/plan9/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/09 14:35:16 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/24 09:51:35 agc Exp $
 # FreeBSD Id: Makefile,v 1.3 1996/11/26 08:57:54 asami Exp
 #
 
@@ -8,5 +8,6 @@
     SUBDIR += Xg
     SUBDIR += rc
     SUBDIR += sam
+    SUBDIR += wily
 
 .include <bsd.port.subdir.mk>
