--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/10/03 09:41:13 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/10/24 10:12:32 agc Exp $
 # FreeBSD Id: Makefile,v 1.23 1997/09/30 06:14:59 asami Exp
 #
 
@@ -26,6 +26,7 @@
 #    SUBDIR += xcpustate
 #    SUBDIR += xdu
 #    SUBDIR += xloadface
+    SUBDIR += xosview
 #    SUBDIR += xperfmon
 #    SUBDIR += xsysinfo
 #    SUBDIR += xsysstats
