--- a/shells/es/Makefile
+++ b/shells/es/Makefile
@@ -1,3 +1,4 @@
+# $NetBSD: Makefile,v 1.2 1997/10/24 14:36:06 agc Exp $
 # New ports collection makefile for:    es
 # Version required:     0.9a1
 # Date created:         Sun Aug 13 12:36:14 CDT 1995
@@ -12,5 +13,7 @@ CATEGORIES=	shells
 MASTER_SITES=   ftp://ftp.sys.toronto.edu/pub/es/
 
 MAINTAINER=	erich@FreeBSD.org
+
+MANCOMPRESSED=	yes
 
 .include <bsd.port.mk>
