--- a/shells/Makefile
+++ b/shells/Makefile
@@ -1,11 +1,12 @@
+# $NetBSD: Makefile,v 1.2 1997/10/24 15:01:59 agc Exp $
 # FreeBSD Id: Makefile,v 1.13 1997/01/03 00:40:55 max Exp
 #
 
-    SUBDIR += bash
-    SUBDIR += bash2
+#    SUBDIR += bash
+#    SUBDIR += bash2
     SUBDIR += es
-    SUBDIR += scsh
-    SUBDIR += pdksh
+#    SUBDIR += scsh
+#    SUBDIR += pdksh
     SUBDIR += tcsh
     SUBDIR += zsh
 
