--- a/sysutils/xosview/Makefile
+++ b/sysutils/xosview/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 1997/10/24 10:11:28 agc Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/24 15:12:12 agc Exp $
 # New ports collection makefile for:    xosview
 # Version required:     		1.4.4beta
 # Date created:         		Fri Oct 24 10:03:55 BST 1997
@@ -9,7 +9,7 @@ DISTNAME=       xosview-1.4.4beta
 CATEGORIES=	sysutils
 MASTER_SITES=   http://lore.ece.utexas.edu/~bgrayson/xosview/
 
-MAINTAINER=	agc@netbsd.org
+MAINTAINER=	bgrayson@ece.utexas.edu
 
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
