--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -1,22 +1,23 @@
-# $Id: Makefile,v 1.1.1.1 1997/10/27 02:18:56 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/27 02:42:04 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.18 1997/05/16 01:42:31 asami Exp 
 #
 
-    SUBDIR += arc
-    SUBDIR += bzip
-    SUBDIR += freeze
-    SUBDIR += gshar+gunshar
-    SUBDIR += ha
-    SUBDIR += hpack.non-usa.only
-    SUBDIR += lha
-    SUBDIR += nulib
-    SUBDIR += p5-Compress-Zlib
-    SUBDIR += rar
-    SUBDIR += unarj
-    SUBDIR += unrar
-    SUBDIR += unzip
-    SUBDIR += unzip.with_encryption
+#    SUBDIR += arc
+#    SUBDIR += bzip
+#    SUBDIR += freeze
+#    SUBDIR += gshar+gunshar
+#    SUBDIR += ha
+#    SUBDIR += hpack.non-usa.only
+#    SUBDIR += lha
+#    SUBDIR += nulib
+#    SUBDIR += p5-Compress-Zlib
+#    SUBDIR += rar
+#    SUBDIR += unarj
+#    SUBDIR += unrar
+#    SUBDIR += unzip
+#    SUBDIR += unzip.with_encryption
     SUBDIR += zip
-    SUBDIR += zip.with_encryption
-    SUBDIR += zoo
+#    SUBDIR += zip.with_encryption
+#    SUBDIR += zoo
 
 .include <bsd.port.subdir.mk>
