--- a/archivers/lha/Makefile
+++ b/archivers/lha/Makefile
@@ -3,7 +3,8 @@
 # Date created:         26 Dec 1994
 # Whom:                 ache
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/27 02:19:01 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/27 03:22:14 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.9 1996/12/15 02:05:58 max Exp 
 #
 
 DISTNAME=       lha-114c
