--- a/archivers/zoo/Makefile
+++ b/archivers/zoo/Makefile
@@ -3,7 +3,8 @@
 # Date created:         18 October 1994
 # Whom:                 jmz
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/27 02:19:08 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/27 03:22:33 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.8 1997/08/10 22:31:36 fenner Exp 
 #
 
 DISTNAME=       zoo-2.10pl1
