--- a/audio/gsm/Makefile
+++ b/audio/gsm/Makefile
@@ -3,14 +3,19 @@
 # Date created:		5 January 1995
 # Whom:			pst
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/28 23:18:29 augustss Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/28 23:46:46 augustss Exp $
+# FreeBSD Id: Makefile,v 1.10 1997/07/17 15:12:39 max Exp 
 #
 
 DISTNAME=       gsm-1.0.10
 CATEGORIES=	audio
 MASTER_SITES=	ftp://ftp.cs.tu-berlin.de/pub/local/kbs/tubmik/gsm/
 
+# FreeBSD maintainer
 MAINTAINER=	ports@FreeBSD.org
+
+USE_GMAKE=	yes
+MAKE_FLAGS=	PREFIX="${PREFIX}"
 
 WRKSRC=         ${WRKDIR}/gsm-1.0-pl10
 MAN1=		toast.1
