--- a/audio/cam/Makefile
+++ b/audio/cam/Makefile
@@ -3,7 +3,7 @@
 # Date created:		Tue Nov 12 15:54:21 CST 1996
 # Whom:			erich@FreeBSD.org
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/28 23:18:23 augustss Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/29 18:03:23 augustss Exp $
 #
 
 DISTNAME=	cam-1.02
@@ -12,6 +12,9 @@ MASTER_SITES=	${MASTER_SITE_SUNSITE}
 MASTER_SITE_SUBDIR=	apps/sound/mixers
 EXTRACT_SUFX=	.tgz
 
+BUILD_DEPENDS=	${PREFIX}/lib/libncurses.a:${PORTSDIR}/devel/ncurses
+
+# FreeBSD maintainer
 MAINTAINER=	erich@FreeBSD.org
 
 .include <bsd.port.mk>
