--- a/audio/tracker/Makefile
+++ b/audio/tracker/Makefile
@@ -3,7 +3,8 @@
 # Date created:         2 Oct 1994
 # Whom:                 swallace
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/28 23:19:12 augustss Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/30 00:15:01 augustss Exp $
+# FreeBSD Id: Makefile,v 1.29 1996/12/20 23:46:22 ache Exp 
 #
 
 DISTNAME=       tracker-5.3
@@ -11,13 +12,14 @@ CATEGORIES=     audio
 MASTER_SITES=   ftp://ftp.ens.fr/pub/dmi/users/espie/beta/
 EXTRACT_SUFX=   .tgz
 
+# FreeBSD maintainer
 MAINTAINER=     ache@FreeBSD.ORG
 
 RESTRICTED=     "Non-redistributable beta"
 
 WRKSRC=         ${WRKDIR}/tracker
 USE_GMAKE=      yes
-MAKE_FLAGS=     MACHINE=freebsd CC=$(CC) INSTALL="$(INSTALL)" \
+MAKE_FLAGS=     MACHINE=netbsd CC=$(CC) INSTALL="$(INSTALL)" \
 		INST_BIN_OPT="-c -s -m $(BINMODE) -o $(BINOWN) -g $(BINGRP)" \
 		INST_MAN_OPT="-c -m 644 -o $(BINOWN) -g $(BINGRP)" \
 		COMPRESSION_FILE=$(PREFIX)/etc/compression_methods \
